--- a/site/test.html
+++ b/site/test.html
@@ -8,6 +8,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
   </head>
   <body>
-  hello, world
+  あの日、星が降った日。
   </body>
 </html>
